fix spacing issue on mobile projects list

--- a/ReactWebApp/components/ProjectList/ProjectListItem.scss
+++ b/ReactWebApp/components/ProjectList/ProjectListItem.scss
@@ -34,6 +34,12 @@
   color: #ddd;
   padding: 20px 0 0 0;
 
+  @include media(0, 600) {
+
+    padding: 20px 20px 0 20px;
+
+  }
+
   h4 {
 
     margin: 0 0 10px 0;
